[feat] make storageEndpoint configurable
