# api/openapi-spec/swagger.json
@@ -429,13 +429,17 @@
       }
     },
     "io.argoproj.workflow.v1alpha1.IPFSArtifact": {
-      "description": "HTTPArtifact allows an file served on HTTP to be placed as an input artifact in a container",
+      "description": "IPFSArtifact allows an file served on IPFS to be placed as an input artifact in a container via hash",
       "required": [
-        "hash"
+        "hash",
+        "storageEndpoint"
       ],
       "properties": {
         "hash": {
-          "description": "URL of the artifact",
+          "description": "Hash of the artifact",
+          "type": "string"
+        },
+        "storageEndpoint": {
           "type": "string"
         }
       }
